--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
+@import "vendors/modern-normalize.scss";
 @import "abstract/variables";
 @import "abstract/functions";
 @import "abstract/mixins";
@@ -5,23 +6,7 @@
 @import "base/typography";
 @import "base/utility";
 // @import "layout/grid";
-@import "layout/navigation";
-@import "base/animation";
-@import "layout/portfolio";
-@import "layout/view-page";
-@import "layout/mainHome";
-@import "layout/presentation";
-@import "layout/skills";
-@import "layout/projet";
-@import "layout/filter";
-@import "layout/timeline";
 // @import "components/loader";
-@import "components/menu-bar";
-@import "components/menu-list";
-@import "components/btn";
-@import "components/header";
-@import "components/cardid";
-@import "components/title";
-@import "components/form";
-@import "components/popup";
-@import "components/footer";
+@import "components/bg_grid";
+// @import "components/btn";
+// @import "components/title";
