--- a/src/sass/base/_utility.scss
+++ b/src/sass/base/_utility.scss
@@ -21,3 +21,11 @@
 .u-margin-top-huge {
     margin-top: 10rem !important;
 }
+
+.u-lowercase{
+    text-transform: lowercase;
+}
+
+.u-f-regular{
+    font-weight: $font-weight-regular;
+}
