--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,5 +8,6 @@
 // @import "layout/grid";
 // @import "components/loader";
 @import "components/bg_grid";
-// @import "components/btn";
+@import "components/navigation_bar";
+@import "components/hero";
 // @import "components/title";
