--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,4 +10,5 @@
 @import "components/bg_grid";
 @import "components/navigation_bar";
 @import "components/hero";
+@import "components/quick-link";
 // @import "components/title";
