--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -3,15 +3,16 @@ $bg:[];
 .hero{
     height: 100vh;
     width: 100vw;
-    outline: solid red 1px;
-    background: red;
-    background-attachment: fixed;
-    background-position: center top;
     display: flex;
     align-items: stretch;
     flex-flow: column;
     justify-content: center;
-
+    
+    // outline: solid red 1px;
+    // background: red;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
     
     text-transform: uppercase;
     font-weight: 700;
@@ -19,15 +20,24 @@ $bg:[];
     font-family: $heading-font-family;
 
     &--default{
-        background-image: url(./../assets/imgs/bg_1.png);    
+        background-image: url(./../assets/imgs/bg_1-mobile.png); 
+
+        @media screen and (orientation: landscape){
+            background-image: url(./../assets/imgs/bg_1.png); 
+        }
+        @include respond-to(medium){
+            background-image: url(./../assets/imgs/bg_1.png); 
+        }
     }
 
     &__pick-up{
         text-align: center;
         margin-bottom: 8rem;
+
         & h1 {
             margin: 0;
             font-size: inherit;
+            color: $dark-400;
         }
         &-firstline span{
             font-size: $heading-font-size-small;
@@ -42,6 +52,7 @@ $bg:[];
     }
     &__names{
         width: 100%;
+        color: $off-white;
         p {
             display: inline-block;
             width: 100%;
@@ -64,7 +75,7 @@ $bg:[];
         }
         &--dark{
             background: $dark-400;
-            padding:0.5em  0.5em 0.5em 1em;
+            padding:0.5em 10vw 0.5em 1em;
             justify-content: start;
 
             color: $off-white;
@@ -73,14 +84,14 @@ $bg:[];
             font-size: $heading-font-size-smallest;
         }
         &--nobg{
-            padding:0.5em 0.5em 0.5em 1em;
+            padding:0.5em 1em 0.5em 0.5em;
             
             font-size: $heading-font-size-small;
             font-weight: $font-weight-bold;
         }
         
         p:not(:first-of-type) .hero__names--dark{
-            padding: 0.5em 1em 0.5em 0.5em;
+            padding: 0.5em 1em 0.5em 10vw;
             justify-content: end;
 
         }
