--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -25,8 +25,10 @@ html {
 body {
     background: $off-white;
     box-sizing: border-box;
-   
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
 
 main {
