--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/utility";
 // @import "layout/grid";
 // @import "components/loader";
+@import "components/btn";
+@import "components/intro";
 @import "components/bg_grid";
 @import "components/navigation_bar";
 @import "components/hero";
