add Case study part

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -7,6 +7,7 @@ $bg:[];
     align-items: stretch;
     flex-flow: column;
     justify-content: center;
+    margin-bottom: 3rem;
     
     // outline: solid red 1px;
     // background: red;
