--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,9 +8,11 @@
 // @import "layout/grid";
 // @import "components/loader";
 @import "components/btn";
+@import "components/title";
 @import "components/intro";
 @import "components/bg_grid";
 @import "components/navigation_bar";
 @import "components/hero";
 @import "components/quick-link";
+@import "components/case-study";
 // @import "components/title";
