--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,4 +15,5 @@
 @import "components/hero";
 @import "components/quick-link";
 @import "components/case-study";
+@import "components/blog";
 // @import "components/title";
