--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -4,5 +4,6 @@
         font-family: $heading-font-family;
         color: $gray-400;
         margin-bottom: 2rem;
+        align-self: flex-start;
     }
 }
