--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,4 +16,5 @@
 @import "components/quick-link";
 @import "components/case-study";
 @import "components/blog";
+@import "components/footer";
 // @import "components/title";
