--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,5 +1,9 @@
 .blog{
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
     &__list{
         list-style: none;
         margin: 0;
@@ -8,21 +12,39 @@
     &__item{
         &-article{
             position: relative;
-
-            time{
-                position: absolute;
-                top: 0;
-                left: 80%;
-                transform: rotate(-90deg);
-                color: $off-white;
-                mix-blend-mode: difference;
-                font-weight: 700;
-            }
         }
-    &-img{
-        width: 100%;
-        background:$dark-400;
-    }
+        &-tag{
+            position: absolute;
+            top: 0;
+            left: calc(80% - 0.5em) ;
+            transform: rotate(-90deg);
+            color: $off-white;
+            mix-blend-mode: difference;
+            font-weight: $font-weight-bold;
+            font-size: $body-font-size-small;
+            width: fit-content;
+            font-family: $heading-font-family;
+        }
+        &-img{
+            width: 100%;
+            background:$dark-400;
+        }
+        & header{
+            margin: 17px 12px;
+            padding: 0;
+        }
+        &-header{
+            margin: 0;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: $heading-font-size-medium-small;
+            text-align: left;
+            font-weight: $font-weight-regular;
+            font-family: $heading-font-family;
+        }
 
     }
 }
