change text formatage

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,4 +17,5 @@
 @import "components/case-study";
 @import "components/blog";
 @import "components/footer";
+@import "components/blog-item"
 // @import "components/title";
