--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,104 +1,104 @@
-$bg:[];
+$bg: [];
 
-.hero{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: stretch;
-    flex-flow: column;
-    justify-content: center;
-    margin-bottom: 3rem;
-    
-    // outline: solid red 1px;
-    // background: red;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: $heading-font-size-medium;
-    font-family: $heading-font-family;
+.hero {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: stretch;
+  flex-flow: column;
+  justify-content: flex-end;
+  margin-bottom: 3rem;
 
-    &--default{
-        background-image: url(./../assets/imgs/bg_1-mobile.png); 
+  // outline: solid red 1px;
+  // background: red;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-        @media screen and (orientation: landscape){
-            background-image: url(./../assets/imgs/bg_1.png); 
-        }
-        @include respond-to(medium){
-            background-image: url(./../assets/imgs/bg_1.png); 
-        }
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: $heading-font-size-medium;
+  font-family: $heading-font-family;
+
+  &--default {
+    background-image: url(./../assets/imgs/bg_1-mobile.png);
+
+    @media screen and (orientation: landscape) {
+      background-image: url(./../assets/imgs/bg_1.png);
+    }
+    @include respond-to(medium) {
+      background-image: url(./../assets/imgs/bg_1.png);
+    }
+  }
+
+  &__pick-up {
+    text-align: center;
+    margin-bottom: 8rem;
+
+    & h1 {
+      margin: 0;
+      font-size: inherit;
+      color: $dark-400;
+    }
+    &-firstline span {
+      font-size: $heading-font-size-small;
+    }
+    &-firstline {
+      margin-bottom: 6rem;
+    }
+    &-firstline,
+    &-secondline {
+      display: inline-block;
+      width: 100%;
+    }
+  }
+  &__names {
+    width: 100%;
+    color: $off-white;
+    margin-bottom: 9.5rem;
+    p {
+      display: inline-block;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+
+      font-size: $heading-font-size-small;
+      font-weight: 700;
+      font-family: $heading-font-family;
     }
 
-    &__pick-up{
-        text-align: center;
-        margin-bottom: 8rem;
-
-        & h1 {
-            margin: 0;
-            font-size: inherit;
-            color: $dark-400;
-        }
-        &-firstline span{
-            font-size: $heading-font-size-small;
-        }
-        &-firstline{
-            margin-bottom: 6rem;
-        }
-        &-firstline,&-secondline{
-            display: inline-block;
-            width: 100%;
-        }
+    p:not(:first-of-type) {
+      justify-content: start;
     }
-    &__names{
-        width: 100%;
-        color: $off-white;
-        p {
-            display: inline-block;
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
-            
-            font-size: $heading-font-size-small;
-            font-weight: 700;
-            font-family: $heading-font-family;
-        }
-
-        p:not(:first-of-type){
-            justify-content: start;
-        }
-        & span {        
-            text-transform: uppercase;
-            font-family: $heading-font-family;
-            display: inline-flex;
-            align-items: center;
-        }
-        &--dark{
-            background: $dark-400;
-            padding:0.5em 10vw 0.5em 1em;
-            justify-content: start;
-
-            color: $off-white;
-            text-align: center;
-            font-weight: $font-weight-regular;
-            font-size: $heading-font-size-smallest;
-        }
-        &--nobg{
-            padding:0.5em 1em 0.5em 0.5em;
-            
-            font-size: $heading-font-size-small;
-            font-weight: $font-weight-bold;
-        }
-        
-        p:not(:first-of-type) .hero__names--dark{
-            padding: 0.5em 1em 0.5em 10vw;
-            justify-content: end;
-
-        }
-        p:not(:first-of-type) .hero__names--nobg{
-            padding:0.5em 0.5em 0.5em  1em;
-        }
-        
+    & span {
+      text-transform: uppercase;
+      font-family: $heading-font-family;
+      display: inline-flex;
+      align-items: center;
     }
+    &--dark {
+      background: $dark-400;
+      padding: 0.5em 10vw 0.5em 1em;
+      justify-content: start;
+
+      color: $off-white;
+      text-align: center;
+      font-weight: $font-weight-regular;
+      font-size: $heading-font-size-smallest;
+    }
+    &--nobg {
+      padding: 0.5em 1em 0.5em 0.5em;
+
+      font-size: $heading-font-size-small;
+      font-weight: $font-weight-bold;
+    }
+
+    p:not(:first-of-type) .hero__names--dark {
+      padding: 0.5em 1em 0.5em 10vw;
+      justify-content: end;
+    }
+    p:not(:first-of-type) .hero__names--nobg {
+      padding: 0.5em 0.5em 0.5em 1em;
+    }
+  }
 }
