--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,21 +1,20 @@
-@import "vendors/modern-normalize.scss";
-@import "abstract/variables";
-@import "abstract/functions";
-@import "abstract/mixins";
-@import "base/base";
-@import "base/typography";
-@import "base/utility";
+@import 'vendors/modern-normalize.scss';
+@import 'abstract/variables';
+@import 'abstract/functions';
+@import 'abstract/mixins';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utility';
 // @import "layout/grid";
 // @import "components/loader";
-@import "components/btn";
-@import "components/title";
-@import "components/intro";
-@import "components/bg_grid";
-@import "components/navigation_bar";
-@import "components/hero";
-@import "components/quick-link";
-@import "components/case-study";
-@import "components/blog";
-@import "components/footer";
-@import "components/blog-item"
-// @import "components/title";
+@import 'components/btn';
+@import 'components/title';
+@import 'components/intro';
+@import 'components/bg_grid';
+@import 'components/navigation_bar';
+@import 'components/hero';
+@import 'components/quick-link';
+@import 'components/case-study';
+@import 'components/blog';
+@import 'components/footer';
+@import 'components/blog-item'; // @import "components/title";
