--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -25,21 +25,20 @@ $gray-300: hsl(0, 0%, 83%); //#d4d4d4
 $gray-200: hsl(0, 0%, 87%); //#dddddd
 
 $blue-300: hsl(208, 79%, 24%); //#0d406d
-$blue-500: hsl(208,78%,42%);//#1871bf
+$blue-500: hsl(208, 78%, 42%); //#1871bf
 
 $error-400: hsl(338, 100%, 46%); //#EB0055
 
 $warning-400: hsl(40, 89%, 60%); //#F4B740
 
-
-$lineColor: hsla(0,0%,0%,5%);
+$lineColor: hsla(0, 0%, 0%, 5%);
 
 /*Font*/
-@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Raleway&family=Source+Code+Pro&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Raleway&family=Source+Code+Pro&display=swap');
 
-$heading-font-family: "Raleway", sans-serif;
-$body-font-family: "Cabin", sans-serif;
-$code-font-family: "Source Code Pro", monospace;
+$heading-font-family: 'Raleway', sans-serif;
+$body-font-family: 'Cabin', sans-serif;
+$code-font-family: 'Source Code Pro', monospace;
 
 $font-weight-regular: 400;
 $font-weight-bold: 700;
@@ -70,9 +69,7 @@ $spacing-30: 3rem;
 $spacing-50: 5rem;
 $spacing-100: 10rem;
 
-
 $content-max-width: 986px;
-
 
 $grid-columns: 12;
 $grid-gutter: 16px;
@@ -86,12 +83,10 @@ $grid-margin: 46px;
 ///   body {
 ///   	font-family: $system-fonts;
 ///   }
-$system-fonts: "system-ui", "-apple-system", "Segoe UI", "Roboto", "Helvetica",
-  "Arial", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji" !default;
+$system-fonts: 'system-ui', '-apple-system', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif',
+    'Apple Color Emoji', 'Segoe UI Emoji' !default;
 
-$system-fonts-mono: "ui-monospace", "SFMono-Regular", "Consolas",
-  "Liberation Mono", "Menlo", "monospace" !default;
-
+$system-fonts-mono: 'ui-monospace', 'SFMono-Regular', 'Consolas', 'Liberation Mono', 'Menlo', 'monospace' !default;
 
 // Config file and project variables
 // ----------------
@@ -107,18 +102,12 @@ $extra-large: 1200px !default;
 $xextra-large: 1300px !default;
 
 $breakpoints: (
-  tinny: $tinny,
-  
-  small: $small,
-
-  medium: $medium,
-  
-  large: $large,
-
-  huge: $extra-large,
-  
-  xtra: $xextra-large
-  
+    tinny: $tinny,
+    small: $small,
+    medium: $medium,
+    large: $large,
+    huge: $extra-large,
+    xtra: $xextra-large,
 );
 
 // z-indexes
