--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -12,7 +12,6 @@
     margin: 0 auto;
 }
 
-
 /*
         [class^="col-"] debute avec col-
         [class$="col-"] fini avec col-
@@ -20,7 +19,7 @@
 
     */
 
-[class^="col-"] {
+[class^='col-'] {
     float: left;
     background-color: #93d78a;
     &:not(:last-child) {
@@ -28,13 +27,11 @@
     }
 }
 
-
 /****
 *
 *Crétion de la grille 
 *
 */
-
 
 /** 1 colonne **/
 
@@ -86,15 +83,11 @@
 
 /* ---------------------------------- */
 
-
 /* ==Grillade v6                      */
-
 
 /* ---------------------------------- */
 
-
 /* IMPORTANT : this is the KNACSS v6 old Grid System based on Flexbox */
-
 
 /* You only need it for projects on older browsers (IE11-) */
 
@@ -108,17 +101,21 @@ $large: 992px !default;
 $extra-large: 1200px !default;
 $cols: 12 !default;
 // gutter values for grid layouts. Unit can be: %, px, em, rem
-$grid-gutters: ('': 1rem, '-l': 2rem, '-xl': 4rem);
+$grid-gutters: (
+    '': 1rem,
+    '-l': 2rem,
+    '-xl': 4rem,
+);
 // IEfixing, see
 // https://github.com/alsacreations/KNACSS/issues/133;
 $iefix: 0.01px;
 @media (min-width: $small) {
-    [class*=" grid-"],
-    [class^="grid-"] {
+    [class*=' grid-'],
+    [class^='grid-'] {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        &>* {
+        & > * {
             box-sizing: border-box;
             min-width: 0;
             min-height: 0;
@@ -129,15 +126,14 @@ $iefix: 0.01px;
 // Multi-line grid constructor
 // example : .grid-perso { @include grid(12, 3rem); }
 @mixin grid($grid-number: 1, $own-gutter: 0) {
-    &>* {
+    & > * {
         width: calc(100% / #{$grid-number} - #{$iefix});
     }
-    @each $affix,
-    $size in $grid-gutters {
+    @each $affix, $size in $grid-gutters {
         &.has-gutter#{$affix} {
             margin-right: -$size / 2;
             margin-left: -$size / 2;
-            &>* {
+            & > * {
                 width: calc(100% / #{$grid-number} - #{$size} - #{$iefix});
                 margin-right: $size / 2;
                 margin-left: $size / 2;
@@ -147,7 +143,7 @@ $iefix: 0.01px;
     @if ($own-gutter !=0) {
         margin-right: -$own-gutter / 2;
         margin-left: -$own-gutter / 2;
-        &>* {
+        & > * {
             width: calc(100% / #{$grid-number} - #{$own-gutter} - #{$iefix});
             margin-right: $own-gutter / 2;
             margin-left: $own-gutter / 2;
@@ -160,15 +156,14 @@ $iefix: 0.01px;
     .grid,
     .grid--reverse {
         display: flex;
-        &>* {
+        & > * {
             flex: 1 1 0%;
             box-sizing: border-box;
             min-width: 0;
             min-height: 0;
         }
-        @each $affix,
-        $size in $grid-gutters {
-            &.has-gutter#{$affix}>*+* {
+        @each $affix, $size in $grid-gutters {
+            &.has-gutter#{$affix} > * + * {
                 margin-left: calc(#{$size} - #{$iefix});
             }
         }
@@ -178,7 +173,7 @@ $iefix: 0.01px;
 // Constructing grids : will be compiled in CSS
 @media (min-width: $small) {
     @for $i from 2 through $cols {
-        [class*="grid-#{$i}"] {
+        [class*='grid-#{$i}'] {
             @include grid(#{$i}, 0);
         }
     }
@@ -202,35 +197,26 @@ $iefix: 0.01px;
     order: 1;
 }
 
-[class*="grid-"][class*="--reverse"] {
+[class*='grid-'][class*='--reverse'] {
     flex-direction: row-reverse;
 }
 
 // sizing individual children
 @media (min-width: $small) {
-    @each $flow,
-    $divider in ("full""1"),
-    ("one-half""2"),
-    ("one-third""3"),
-    ("one-quarter""4"),
-    ("one-fifth""5"),
-    ("one-sixth""6"),
-    ("two-thirds""3 * 2"),
-    ("three-quarters""4 * 3"),
-    ("five-sixths""6 * 5") {
+    @each $flow, $divider in ('full' '1'), ('one-half' '2'), ('one-third' '3'), ('one-quarter' '4'), ('one-fifth' '5'),
+        ('one-sixth' '6'), ('two-thirds' '3 * 2'), ('three-quarters' '4 * 3'), ('five-sixths' '6 * 5')
+    {
         .#{$flow} {
             flex: 0 0 auto;
             width: calc(100% / #{$divider} - #{$iefix});
         }
-        @each $affix,
-        $size in $grid-gutters {
-            .has-gutter#{$affix}>.#{$flow} {
+        @each $affix, $size in $grid-gutters {
+            .has-gutter#{$affix} > .#{$flow} {
                 width: calc(100% / #{$divider} - #{$size} - #{$iefix});
             }
         }
     }
 }
-
 
 /* Responsive Small Breakpoint */
 
@@ -238,13 +224,12 @@ $iefix: 0.01px;
 // example : .grid-4-small-2 will be 1 column (tiny and down) then 2 columns (until medium) then 4 columns
 @media (min-width: $small) and (max-width: ($medium - 1)) {
     @for $i from 1 through 4 {
-        [class*="-small-#{$i}"] {
-            &>* {
+        [class*='-small-#{$i}'] {
+            & > * {
                 width: calc(100% / #{$i} - #{$iefix});
             }
-            @each $affix,
-            $size in $grid-gutters {
-                &.has-gutter#{$affix}>* {
+            @each $affix, $size in $grid-gutters {
+                &.has-gutter#{$affix} > * {
                     width: calc(100% / #{$i} - #{$size} - #{$iefix});
                 }
             }
