add blog-item page

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -59,7 +59,7 @@ $body-font-size-largest: 2.9rem; //29px
 $body-font-size-large: 2rem; //20px
 $body-font-size-medium: 1.6rem; //16px
 $body-font-size-small: 1.4rem; //14px ?
-
+$body-font-size-smallest: 1.1rem; //11px
 $spacing-05: 0.5rem;
 $spacing-10: 1rem;
 $spacing-15: 1.5rem;
