--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,6 @@
 // @import "layout/grid";
 // @import "components/loader";
 @import 'components/btn';
-@import 'components/title';
 @import 'components/intro';
 @import 'components/bg_grid';
 @import 'components/navigation_bar';
@@ -17,4 +16,6 @@
 @import 'components/case-study';
 @import 'components/blog';
 @import 'components/footer';
-@import 'components/blog-item'; // @import "components/title";
+@import 'components/blog-item';
+@import 'components/taglist';
+@import 'components/title';
