--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -6,4 +6,14 @@
         margin-bottom: 2rem;
         align-self: flex-start;
     }
+
+    &-blog {
+        color: $dark-400;
+        font-family: $heading-font-family;
+        font-weight: $font-weight-regular;
+        @include fluid-type(font-size, $small, $extra-large, $heading-font-size-small, $heading-font-size-medium-small);
+        border-bottom: $gray-200 solid 1px;
+        padding-bottom: 4px;
+        margin-bottom: 6px;
+    }
 }
