--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -5,6 +5,7 @@
         color: $gray-400;
         margin-bottom: 2rem;
         align-self: flex-start;
+        font-weight: $font-weight-regular;
     }
 
     &-blog {
