--- a/src/sass/abstract/_functions.scss
+++ b/src/sass/abstract/_functions.scss
@@ -3,6 +3,8 @@
 /// @param {Color} $color - color to tint
 /// @param {Number} $percentage - percentage of `$color` in returned color
 /// @return {Color}
+@use 'sass:math';
+
 @function tint($color, $percentage) {
     @return mix(white, $color, $percentage);
 }
@@ -17,5 +19,5 @@
 }
 
 @function strip-unit($value) {
-    @return $value / ($value * 0 + 1);
+    @return math.div($value, $value * 0 + 1);
 }
