--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -58,7 +58,8 @@
 }
 
 /* responsive fluid pour les typos*/
-
+/*         @include fluid-type(font-size, $small, $extra-large, $heading-font-size-medium-large, 9.6rem);
+ */
 @mixin fluid-type($properties, $min-vw, $max-vw, $min-value, $max-value) {
     & {
         @each $property in $properties {
@@ -70,8 +71,30 @@
                     (
                         #{$min-value} +
                             #{strip-unit($max-value - $min-value)} *
-                            ((100vw - #{$min-vw})) /
-                            #{strip-unit($max-vw - $min-vw)}
+                            ((100vw - #{$min-vw}) / (#{strip-unit($max-vw - $min-vw)} / 10))
+                    )
+                );
+            }
+        }
+        @media screen and (min-width: $max-vw) {
+            @each $property in $properties {
+                #{$property}: $max-value;
+            }
+        }
+    }
+}
+@mixin fluid-type-v1($properties, $min-vw, $max-vw, $min-value, $max-value) {
+    & {
+        @each $property in $properties {
+            #{$property}: $min-value;
+        }
+        @media screen and (min-width: $min-vw) {
+            @each $property in $properties {
+                #{$property}: calc(
+                    (
+                        #{$min-value} +
+                            #{strip-unit($max-value - $min-value)} *
+                            ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)})
                     )
                 );
             }
