--- a/src/sass/components/_case-study-section.scss
+++ b/src/sass/components/_case-study-section.scss
@@ -1,4 +1,4 @@
-.case-study {
+.case-study-section {
     &__list {
         padding: 0;
         list-style: none;
@@ -10,31 +10,53 @@
                 flex-flow: row-reverse nowrap;
                 justify-content: flex-start;
                 text-align: right;
+                @include respond-to(medium){
+                    flex-flow: row nowrap;
+                    text-align: left;
+                }
             }
         }
         &-article {
             display: flex;
             flex-flow: column-reverse wrap;
+
+            @include respond-to(medium){
+                position: relative;
+                flex-flow: row wrap;
+                justify-content: flex-end;
+            }
             & header {
                 display: flex;
                 flex-flow: row nowrap;
                 justify-content: flex-start;
                 align-items: center;
                 width: fit-content;
+                @include respond-to(medium){
+                    flex-direction: column;
+                    position: absolute;
+                    top: 50%;
+                    left: 0;
+                    transform: translateY(-50%);
+                }
             }
         }
 
         &-header {
             font-family: $heading-font-family;
             font-weight: $font-weight-bold;
-            font-size: $heading-font-size-medium;
+            @include fluid-type(font-size, $tinny, $large, $heading-font-size-medium, $heading-font-size-largest);
             margin: -0.5em 0;
             display: flex;
             flex-flow: column;
             -webkit-text-stroke-width: 3px;
             -webkit-text-stroke-color: $dark-400;
-
             max-width: 60%;
+            color: $dark-400;
+            @include respond-to(medium){
+             max-width: fit-content;
+            margin: 0;
+            }
+            
 
             & svg {
                 height: 1.1em;
@@ -50,7 +72,7 @@
                 padding: 0;
                 stroke: $dark-400;
                 fill: transparent;
-                font-weight: 100;
+                font-weight: $font-weight-bold;
                 // text-shadow: 1px 1px black, -1px -1px black;
                 font-family: $heading-font-family;
             }
@@ -60,6 +82,11 @@
             height: 100%;
             width: 100%;
             object-fit: cover;
+
+            @include respond-to(medium){
+                max-width: 65rem;
+                box-shadow: 0px 4px 14px 9px rgba(0, 0, 0, 0.15);
+            }
         }
 
         &-position {
