--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -17,20 +17,31 @@
         letter-spacing: 2px;
     }
     & h4 {
-        font-size: $body-font-size-medium;
+        @include fluid-type(font-size, $tinny, $large, $body-font-size-medium , $heading-font-size-medium-large);
         font-family: $body-font-family;
         font-weight: $font-weight-bold;
         letter-spacing: 2px;
-        margin-top: 3rem;
+        
     }
-
+    
     &__header {
+        margin-top: 3rem;
+        
         text-align: center;
+        @include respond-to(medium){
+            grid-area: 1 / 1 / 2 / 4;
+            margin-bottom: 1rem;
+            border-bottom: 1px solid $dark-400;
+        }
+        
     }
-
+    
     &__citation {
         margin: 0;
         padding: 0;
+        @include respond-to(medium){
+            grid-area: 2 / 1 / 3 / 4;
+        }
 
         blockquote {
             margin: 0;
@@ -40,7 +51,8 @@
             text-align: center;
             font-family: $heading-font-family;
             font-weight: $font-weight-regular;
-            font-size: $body-font-size-medium;
+            @include fluid-type(font-size, $tinny, $large, $body-font-size-medium, $body-font-size-large);
+
             p {
                 margin: 0;
             }
@@ -50,6 +62,10 @@
         }
     }
     &__contact {
+        @include respond-to(medium){
+            grid-area: 3 / 1 / 5 / 2;
+        }
+        
         &-position {
             p {
                 letter-spacing: 2px;
@@ -63,6 +79,24 @@
             }
         }
     }
+    &__menu{
+        @include respond-to(medium){
+            grid-area: 3 / 3 / 5 / 4;
+        }
+    }
+    &__follow {
+        @include respond-to(medium){
+
+        grid-area: 3 / 2 / 5 / 3;
+        }
+    }
+    @include respond-to(medium){
+        &__follow,&__menu,&__contact{
+            h4{
+                font-size: 1.6rem;
+            }
+        }
+    }
     &__menu,
     &__follow {
         ul {
@@ -72,6 +106,9 @@
         }
     }
     &__cgu {
+        @include respond-to(medium){
+            grid-area: 5 / 1 / 6 / 4;
+        }
         text-align: center;
     }
 }
