--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -2,7 +2,7 @@ $bg: [];
 
 .hero {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: stretch;
     flex-flow: column;
@@ -19,15 +19,18 @@ $bg: [];
     font-weight: 700;
     font-size: $heading-font-size-medium;
     font-family: $heading-font-family;
+    @include respond-to(medium){
+        margin-bottom: 10rem;
+    }
 
     &--default {
-        background-image: url(./../assets/imgs/bg_1-mobile.png);
+        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url(./../assets/imgs/bg_1-mobile.png);
 
         @media screen and (orientation: landscape) {
-            background-image: url(./../assets/imgs/bg_1.png);
+            background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url(./../assets/imgs/bg_1.png);
         }
         @include respond-to(medium) {
-            background-image: url(./../assets/imgs/bg_1.png);
+            background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url(./../assets/imgs/bg_1.png);
         }
     }
 
@@ -35,16 +38,31 @@ $bg: [];
         text-align: center;
         margin-bottom: 8rem;
 
+        @include respond-to(large) {
+            max-width: $large;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         & h1 {
             margin: 0;
-            font-size: inherit;
+            font-weight: bold;
             color: $dark-400;
+            @include fluid-type(font-size, $tinny, $large, $heading-font-size-medium, $heading-font-size-large);
         }
         &-firstline span {
-            font-size: $heading-font-size-small;
+            @include fluid-type(font-size, $tinny, $large, $heading-font-size-small, $heading-font-size-medium-large);
         }
         &-firstline {
             margin-bottom: 6rem;
+            @include respond-to(medium) {
+                text-align: start;
+            }
+        }
+        &-secondline {
+            @include respond-to(medium) {
+                text-align: end;
+            }
         }
         &-firstline,
         &-secondline {
@@ -62,9 +80,11 @@ $bg: [];
             display: flex;
             justify-content: flex-end;
 
-            font-size: $heading-font-size-small;
             font-weight: 700;
             font-family: $heading-font-family;
+            // @include respond-to(large){
+            //     margin: 0 var(--gap-body);
+            // }
         }
 
         p:not(:first-of-type) {
@@ -78,27 +98,39 @@ $bg: [];
         }
         &--dark {
             background: $dark-400;
-            padding: 0.5em 10vw 0.5em 1em;
+            // padding: 0.5em 10vw 0.5em 1em;
             justify-content: start;
 
             color: $off-white;
             text-align: center;
             font-weight: $font-weight-regular;
-            font-size: $heading-font-size-smallest;
+            @include fluid-type(font-size, $tinny, $large, $heading-font-size-small, $heading-font-size-medium-large);
+
+            @include respond-to(small) {
+                padding: 0;
+            }
+            @include fluid-type-v1(padding-right, $tinny, $extra-large, 10vw, 35vw);
         }
         &--nobg {
-            padding: 0.5em 1em 0.5em 0.5em;
+            // padding: 0.5em 1em 0.5em 0.5em;
+            padding: 0 0.5em 0 0;
 
-            font-size: $heading-font-size-small;
+            @include fluid-type(font-size, $tinny, $large, $heading-font-size-small, $heading-font-size-large);
             font-weight: $font-weight-bold;
+            @include respond-to(medium) {
+            }
         }
 
         p:not(:first-of-type) .hero__names--dark {
-            padding: 0.5em 1em 0.5em 10vw;
+            // padding: 0.5em 1em 0.5em 10vw;
             justify-content: end;
+            padding-right: 0;
+            @include fluid-type-v1(padding-left, $tinny, $extra-large, 10vw, 35vw);
+
         }
         p:not(:first-of-type) .hero__names--nobg {
-            padding: 0.5em 0.5em 0.5em 1em;
+            // padding: 0.5em 0.5em 0.5em 1em;
+            padding: 0 0 0 0.5em;
         }
     }
 }
