--- a/src/sass/components/_intro-section.scss
+++ b/src/sass/components/_intro-section.scss
@@ -2,20 +2,23 @@
     &__text {
         margin-top: 0;
         margin-bottom: 1rem;
-        font-size: $body-font-size-medium;
+        // font-size: $body-font-size-medium;
         font-family: $body-font-family;
+        @include fluid-type(font-size, $tinny, $large, $body-font-size-medium, $body-font-size-large);
     }
 
     &__title {
         font-weight: $font-weight-bold;
-        font-size: $heading-font-size-small;
+        // font-size: $heading-font-size-small;
+        @include fluid-type(font-size,$tinny,$large,$heading-font-size-small,$heading-font-size-medium-large);
         font-family: $heading-font-family;
         margin: 1rem 0;
         &-label {
             color: $blue-400;
             font-weight: $font-weight-bold;
             font-family: $body-font-family;
-            font-size: $body-font-size-medium;
+            // font-size: $body-font-size-medium;
+            @include fluid-type(font-size,$tinny,$large,$body-font-size-medium,$body-font-size-large)
         }
     }
     &__btns-container {
