--- a/src/sass/components/_navigation_bar.scss
+++ b/src/sass/components/_navigation_bar.scss
@@ -52,12 +52,13 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 1500;
+        z-index: -1;
 
         opacity: 0;
         width: 0;
         transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         pointer-events: none;
+        animation-fill-mode: both;
     }
 
     &__list {
@@ -91,6 +92,7 @@
             background-size: 220%;
             transition: all 0.4s;
             border-bottom: solid 1px $dark-400;
+            opacity: 0;
 
             span {
                 margin-right: 1.5rem;
@@ -115,6 +117,10 @@
         opacity: 1;
         width: 100%;
         pointer-events: auto;
+        z-index: $zindex-navigation;
+    }
+    &__checkbox:checked ~ &__nav &__link {
+        opacity: 1;
     }
 
     //ICON
